# open-regulatory-knowledge-platform

./: .gitignore  GLOSSARY.md  Makefile  README.md  ROADMAP.md  SPEC.md  TASK-REPORT-0001.md  TASK.md  VISION.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml
ADR/: ADR-0001-EventSourcing.md  ADR-0002-MariaDB.md  ADR-0003-Neo4j.md
AI/: SPEC-AI.md
API/: SPEC-REST.md
ARCHITECTURE/: Product-Domain.md  SPEC-Architecture.md
DATABASE/: SPEC-CoreObjectStore.md  SPEC-MariaDB.md
DOMAIN/: SPEC-Claim.md  SPEC-Evidence.md  SPEC-Performance.md  SPEC-Product.md  SPEC-Risk.md
GRAPH/: SPEC-KnowledgeGraph.md
IMPLEMENTATION/Epic-001-Foundation/Feature-001-Specification-Compiler/: TASK-FOUNDATION-0001.md  (+2 more)
IMPLEMENTATION/Epic-002-Core-Object-Store/: TASK-CORE-OBJECT-STORE-0001.md
IMPLEMENTATION/Epic-004-Product-Domain/: TASK-PRODUCT-DOMAIN-0001.md
META/: REQ-META.md  SPEC-IDScheme.md  SPEC-TaskGeneration.md  SPEC-WritingRules.md  task_groups.json
REPORTS/: SPEC-PER.md
SECURITY/: SPEC-RBAC.md
TESTING/: SPEC-Validation.md
TRACEABILITY/: Requirements.csv  backlog.csv  backlog.md  lint_report.md
UI/: SPEC-UI.md
WORKFLOW/: SPEC-Approval.md
src/orkp/: __init__.py  config.py
src/orkp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_backlog_generator.py  test_domain_api.py  test_domain_services.py  test_per_report_service.py  test_repository.py  test_risk_evaluation.py  test_risk_evaluation_api.py  test_spec_linter.py
tools/: backlog_generator.py  spec_linter.py
(+29 files in other folders)
