[project]
name = "orkp"
version = "0.1.0"
description = "Open Regulatory Knowledge Platform"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "pymysql>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]